0.6.1
Renoved some leaky glib code.
Updated LFSTK_strStrip whitespace to include \n & \r.
Removing old 'c' code ...
Code clean.
Fixed mem leaks.

0.6.0
Fixed calendar example.
Fixed minor faults.
Fixed leak in listgadget.
Removing old 'c' code ...
Removing old 'c' code ...
Added small utility class for static functions.
Removing old 'c' code ...
Wrapped 'c' realpath function ( more effecient than using experimental/filesystem ).
Fixed multi line edit geometry.
Fixed memleaks.
Fixed bevel in multi line class.
Fixed extra highlighting in multi box.
Fixed minor memory leak in window/application class.
Changing buffer in multiline edit now auto updates lines.
Added simple calendar to examples.
Added multiline external process call to lib class.
Added editable to line/multi edits.
Added list gadget class mouse down callback.
Set applicaion name and class correctly.
GUI fixes.
Removed some od legacy code.
Added CONTEXTCENTRE to gadget context menu.
Fixed segfault with LFSTK_getSingleProp.
List gadget visual fixes.
Updates to list gadget class.
Redone colours.
Removed more legacy code.
Added util function to lib lcass to get single cardinal/integer/string property for window.
Fixed mouse enter/exit callbacks in toggle.
Fixed segfault in image class.
Removed some old 'c' code.
Minor menu stack fix.
Fixed labels on translucent windows.
Fixed version number in .pc file.
Fixed spurious enter/exit callbacks when clicking gadget.
Fixed set/unset keep above/below.
Fixed setting gadget callbacks to NULL to stop callback.
Fixed setting enter/exit, mouse pressed/released separately.
Added callback for mouse enter/exit.

0.5.2
Added support for colour names including a 8 bit alpha def eg "#80ff00ff".
Added transparent windows ( see examples/subwindows ).
Loads of gui fixes.
Moved to 32bit tru colour windows.

0.5.1
Minor gui fix on scrollable menus.
Fixed scrolling sub menus.
Moved all monitor data/fnctios to main application class.
Fixed getting correct monitor for window.