@@ -81,9 +81,8 @@ std::string LFSTK_UtilityClass::LFSTK_strStr(std::string haystack,std::string ne
 	return("");
 }
 
-std::string LFSTK_UtilityClass::LFSTK_strStrip(std::string haystack)
+std::string LFSTK_UtilityClass::LFSTK_strStrip(std::string haystack,std::string whitespace)
 {
-	std::string	whitespace="\t \r\n";
 	std::string::size_type	foundfront;
 	std::string::size_type	foundback;
 
