@@ -29,7 +29,7 @@ class LFSTK_UtilityClass
 
 		static std::vector<std::string>	LFSTK_strTok(std::string str,std::string delimiter);
 		static std::string				LFSTK_strStr(std::string haystack,std::string needle,bool caseinsensitive=false);
-		static std::string				LFSTK_strStrip(std::string haystack);
+		static std::string				LFSTK_strStrip(std::string haystack,std::string whitespace="\t \r\n");
 };
 
 #endif
