@@ -1,4 +1,5 @@
 0.6.1
+Set default whitespace for LFSTK_strStrip.
 Renoved some leaky glib code.
 Updated LFSTK_strStrip whitespace to include \n & \r.
 Removing old 'c' code ...
